--- a/app/static/styles/mainpage.css
+++ b/app/static/styles/mainpage.css
@@ -89,8 +89,8 @@
 }
 
 .scroll-arrow{
-    float: right;
-    margin-right: 2%;
+    text-align: center;
+    margin-top: -3%;
 }
 .scroll-arrow a{
     color: #4183c4;
