sceoll arrow position

--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -275,7 +275,7 @@
             </header>
             <!-- Analytics section - Algotrader Score-->
             <section id="algotrader-score">
-                <div class="container px-4">
+                <div class="container px-4" style="margin-bottom: 8%;">
                     <div class="gx-4">
                         <div style="width: 48%; position: absolute; z-index: 1;" class="animated lightSpeedIn">
                             <div class="section-title font-weight-bold">
