sceoll arrow position

--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -366,7 +366,7 @@
             </section>
             <!-- Analytics section - Market Emotion-->
             <section id="market-emotion">
-                <div class="container px-4">
+                <div class="container px-4" style="margin-top: 6%; margin-bottom: 10%;">
                     <div class="gx-4" style="display: flex; width: 100%;">
                         <div style="position: absolute;">
                            <img src="{{ url_for('static', filename='images/main/market_emotion.png') }}" style="width: 525px;height: 390px;">
