sceoll arrow position

--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -492,7 +492,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="fa-3x scroll-arrow">
+                <div class="fa-3x scroll-arrow" style="margin-top: 2%;">
                     <a class="nav-scroll" href="#crash-protaction">
                         <i class="fas fa-arrow-circle-down" aria-hidden="true"></i>
                     </a>
