sceoll arrow position

--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -513,7 +513,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div style="position: relative; top: 5%;">
+                        <div style="position: relative;">
                            <img src="{{ url_for('static', filename='images/main/crash_protaction.png') }}" style="width: 80%;">
                         </div>
                     </div>
