sceoll arrow position

--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -500,7 +500,7 @@
             </section>
             <!-- Timing - Crash Protaction -->
             <section id="crash-protaction">
-                <div class="container px-4">
+                <div class="container px-4" style="margin-top: -2%;">
                     <div class="gx-4">
                         <div class="animated lightSpeedIn">
                             <div class="section-title font-weight-bold" style="text-align: inherit; padding-left: 2%;">
