sceoll arrow position

--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -595,7 +595,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="fa-3x scroll-arrow">
+                <div class="fa-3x scroll-arrow" style="margin-top: 3%;">
                     <a class="nav-scroll" href="#custom-filters">
                         <i class="fas fa-arrow-circle-down" aria-hidden="true"></i>
                     </a>
