sceoll arrow position

--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -603,7 +603,7 @@
             </section>
             <!-- Management - Custom Filters-->
             <section id="custom-filters">
-                <div class="container" style="display: inherit;">
+                <div class="container" style="display: inherit; margin-top: 3%">
                     <div class="section-title" style="padding-top: 0; margin-bottom: 5%; text-align: inherit; padding-left: 8%;">
                         <h2>Custom filters</h2>
                     </div>
@@ -679,7 +679,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="fa-3x scroll-arrow">
+                <div class="fa-3x scroll-arrow" style="margin-top: 3%">
                     <a class="nav-scroll" href="#user-view">
                         <i class="fas fa-arrow-circle-down" aria-hidden="true"></i>
                     </a>
