sceoll arrow position

--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -432,7 +432,7 @@
                         <div class="animated lightSpeedIn" style="width: 60%; float: left; overflow: hidden;">
                             <div class="section-title" style="text-align: inherit;">
                                 <h2>Maximizing a profit for a winning position.Better than simply investing.</h2>
-                                <p style="font-size: medium; padding-top: 2%;">
+                                <p style="padding-top: 2%;">
                                     We believe that entering to position on small drops caused by market deviations and bad news and getting out of position with small profit overtime bring better value than just holding it
                                 </p>
                                 <p style="font-size: medium;">
@@ -500,8 +500,8 @@
                 <div class="container px-4">
                     <div class="gx-4">
                         <div class="animated lightSpeedIn">
-                            <div class="section-title font-weight-bold" style="text-align: inherit;">
-                                <h2>Trading based on market emotions</h2>
+                            <div style="text-align: inherit;">
+                                <h2 class="section-title font-weight-bold">Trading based on market emotions</h2>
                                 <p style="padding-right: 55%;">New positions are opened only during a positive market phase. Minimal level can be adjusted by user – with a ability to back test on one last year. </p>
                             </div>
                         </div>
