sceoll arrow position

--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -278,8 +278,8 @@
                 <div class="container px-4" style="margin-bottom: 12%; margin-top: 6%;">
                     <div class="gx-4">
                         <div style="width: 48%; position: absolute; z-index: 1;" class="animated lightSpeedIn">
-                            <div class="section-title font-weight-bold">
-                                <h2>Algotrader score</h2>
+                            <div>
+                                <h2 class="section-title font-weight-bold">Algotrader score</h2>
                                 <p>The data is saved in DB in order to validate the analysis quality</p>
                             </div>
                             <div class="row" style="padding-top: 6%;">
