sceoll arrow position

--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -430,8 +430,8 @@
                 <div class="container px-4">
                     <div class="gx-4" style="width: 100%;">
                         <div class="animated lightSpeedIn" style="width: 60%; float: left; overflow: hidden;">
-                            <div class="section-title" style="text-align: inherit;">
-                                <h2>Maximizing a profit for a winning position.Better than simply investing.</h2>
+                            <div style="text-align: inherit;">
+                                <h2 class="section-title">Maximizing a profit for a winning position.Better than simply investing.</h2>
                                 <p style="padding-top: 2%;">
                                     We believe that entering to position on small drops caused by market deviations and bad news and getting out of position with small profit overtime bring better value than just holding it
                                 </p>
