sceoll arrow position

--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -436,7 +436,7 @@
                                     We believe that entering to position on small drops caused by market deviations and bad news and getting out of position with small profit overtime bring better value than just holding it
                                 </p>
                                 <p>
-                                    Aggregated profit for a shorter positions should be higher than just a stock overall revenue. Of course it will work only if stock is profitable! Entering only to candidate stocks with highest ranks from slide 3
+                                    Aggregated profit for a shorter positions should be higher than just a stock overall revenue. Of course it will work only if stock is profitable!
                                 </p>
                                 <div style="padding-top: 3%; width: 89%; display: flex;">
                                     <div class="opacity-7" style="font-size: small; padding-right: 5px; padding-left: 15%; text-align: justify;">
