sceoll arrow position

--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -441,7 +441,8 @@
                                 <div style="padding-top: 3%; width: 89%; display: flex;">
                                     <div class="opacity-7" style="font-size: small; padding-right: 5px; padding-left: 15%; text-align: justify;">
                                         <p>
-                                            Profit point : configured according broker fees... as personal sence...<br/>Better to use Trailing stop if allowed by API. For example: 1% on IB =not good  it is 10 USD – 2 USD fee, but 6% is already fine: 50 USD-2 USD Fee.
+                                            <span class="pr-1 font-weight-bold">Profit point:</span> configured according broker fees... as personal sence...<br/>
+                                            Better to use Trailing stop if allowed by API. For example: 1% on IB =not good  it is 10 USD – 2 USD fee, but 6% is already fine: 50 USD-2 USD Fee.
                                         </p>
                                     </div>
                                     <div style="padding-top: 6%;">
@@ -461,7 +462,7 @@
                                     </div>
                                     <div class="opacity-7" style="font-size: small; text-align: justify; padding: 12px 20px 0 15px;">
                                         <p>
-                                            Entry point: if during a day stock falls more then average intraday fall of a last year. The statistics is updated on daily basis. From Yahoo finance.
+                                            <span class="pr-1 font-weight-bold">Entry point:</span> if during a day stock falls more then average intraday fall of a last year. The statistics is updated on daily basis. From Yahoo finance.
                                         </p>
                                     </div>
                                 </div>
