sceoll arrow position

--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -522,8 +522,8 @@
                 <div class="container px-4" style="margin-top: -2%;">
                     <div class="gx-4">
                         <div class="animated lightSpeedIn">
-                            <div class="section-title font-weight-bold" style="text-align: inherit; padding-left: 2%;">
-                                <h2>Market crash protection</h2>
+                            <div style="text-align: inherit; padding-left: 2%;">
+                                <h2 class="section-title font-weight-bold">Market crash protection</h2>
                                 <div style="display: flex;">
                                     <div style="font-size: 15px; width: 40%;">
                                         <p>
@@ -550,8 +550,8 @@
                 <div class="container px-4">
                     <div class="gx-4">
                         <div class="animated lightSpeedIn">
-                            <div class="section-title font-weight-bold" style="text-align: inherit; padding-left: 2%;">
-                                <h2>Portfolio management</h2>
+                            <div style="text-align: inherit; padding-left: 2%;">
+                                <h2 class="section-title font-weight-bold">Portfolio management</h2>
                                 <div style="display: flex;">
                                     <div style="font-size: 15px; width: 40%;">
                                         <p>
@@ -578,8 +578,8 @@
                 <div class="container px-4">
                     <div class="gx-4" style="width: 100%; padding-left: 6%;">
                         <div style="width: 70%;">
-                            <div class="section-title font-weight-bold" style="text-align: inherit; padding-left: 5%;">
-                                <h2>Candidates to follow</h2>
+                            <div style="text-align: inherit; padding-left: 5%;">
+                                <h2  class="section-title font-weight-bold">Candidates to follow</h2>
                                 <p style="padding-right: 55%;">Built in system selected list of tickers to follow or user defined custom selection</p>
                             </div>
                             <img src="{{ url_for('static', filename='images/main/candidates_1.png') }}" style="width: 100%;">
@@ -605,8 +605,8 @@
                 <div class="container px-4" style="padding-top: 8%;">
                     <div class="gx-4">
                         <div style="width: 48%; position: absolute; z-index: 1;" class="animated lightSpeedIn">
-                            <div class="section-title font-weight-bold" style="text-align: inherit; position: absolute; padding-left: 10%; padding-top: 0;">
-                                <h2>Personal performance</h2>
+                            <div style="text-align: inherit; position: absolute; padding-left: 10%; padding-top: 0;">
+                                <h2 class="section-title font-weight-bold">Personal performance</h2>
                                 <p style="width: 65%;">Ability to analyze the performance and adjust strategy</p>
                             </div>
                             <div class="row" style="margin: 90px -130px 0 0; position: relative; left: 35%;">
