sceoll arrow position

--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -319,7 +319,7 @@
                                             <div class="widget-content-wrapper card-title" style="flex-direction: column;">
                                                 <h3>SMART SCORE</h3>
                                                 <div class="text-success" style="font-size: 32px;">
-                                                    <p>1 - 10</p>
+                                                    <p style="width: 100%;">1 - 10</p>
                                                 </div>
                                                 <div class="pt-3">
                                                     <img src="/static/images/main/smart_score.png" style="width: 100%;">
