--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -47,7 +47,7 @@
                     <div class="collapse navbar-collapse" id="navbarResponsive">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item p-3">
-                                <a href="" class="nav-link text-end">
+                                <a href="https://t.me/Algotrader_signals"  target="_blank" class="nav-link text-end">
                                     <i class="fab fa-telegram-plane pr-1"></i>
                                     Telegram
                                 </a>
