--- a/app/templates/account/reset_password.html
+++ b/app/templates/account/reset_password.html
@@ -1,8 +1,8 @@
-{% extends 'layouts/base.html' %}
+{% extends 'layouts/main.html' %}
 {% import 'macros/form_macros.html' as f %}
 
 {% block content %}
-<div class="ui grid container">
+<div class="ui grid container login-container">
     <div class="eight wide computer sixteen wide mobile centered column">
         <h2 class="ui dividing header">Reset your password</h2>
         {{ f.render_form(form) }}
