--- a/app/templates/account/unconfirmed.html
+++ b/app/templates/account/unconfirmed.html
@@ -1,8 +1,8 @@
-{% extends 'layouts/base.html' %}
+{% extends 'layouts/main.html' %}
 {% import 'macros/form_macros.html' as f %}
 
 {% block content %}
-<div class="ui text container">
+<div class="ui text container login-container">
 
     <div class="ui padded raised segment">
         <h3>You need to confirm your account before continuing.</h3>
