--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -40,7 +40,7 @@
 <!--</style>-->
 <div class="app-container app-theme-white body-tabs-shadow fixed-sidebar fixed-header closed-sidebar">
     <div class="app-header header-shadow">
-        {% if current_user.is_authenticated %}
+        {% if current_user.is_authenticated and current_user.confirmed%}
         <div class="app-header__logo">
             <!--            <div class="logo-src"></div>-->
             <div class="header__pane ml-auto">
@@ -146,7 +146,7 @@
         </div>
     </div>
     <div class="app-main">
-        {% if current_user.is_authenticated %}
+        {% if current_user.is_authenticated and current_user.confirmed %}
         <div class="app-sidebar sidebar-shadow">
             <div class="app-header__logo">
                 <div class="logo-src">more</div>
@@ -184,14 +184,14 @@
                 <div class="app-sidebar__inner">
                     <ul class="vertical-nav-menu">
                         <li class="app-sidebar__heading">Dashboards</li>
-                        {% if not current_user.is_admin()%}
+                        {% if not current_user.is_admin() and current_user.subscription_type_id == 4 and current_user.admin_confirmed and current_user.signature%}
                         <li>
                             <a href="/userview/traderstationstate">
                                 <i class="metismenu-icon pe-7s-display1"></i>
                                 Trader Station
                             </a>
                         </li>
-                        {%else%}
+                        {%elif current_user.is_admin()%}
                         <li>
                             <a href="/admin/">
                                 <i class="metismenu-icon pe-7s-tools"></i>
@@ -205,7 +205,7 @@
                                 Candidates
                             </a>
                         </li>
-                        {% if not current_user.is_admin()%}
+                        {% if not current_user.is_admin() and current_user.subscription_type_id == 4 and current_user.admin_confirmed and current_user.signature%}
                         <li>
                             <a href="/algotradersettings/usersettings">
                                 <i class="metismenu-icon pe-7s-tools"></i>
@@ -222,7 +222,7 @@
                                 Portfolio performance
                             </a>
                         </li>
-                        {%else%}
+                        {% elif current_user.subscription_type_id == 4 and current_user.admin_confirmed and current_user.signature%}
                         <li>
                             <a href="/userview/closedpositions">
                                 <i class="metismenu-icon pe-7s-wallet"></i>
@@ -230,12 +230,14 @@
                             </a>
                         </li>
                         {%endif%}
+                        {% if current_user.subscription_type_id != 2 %}
                         <li>
                             <a href="/station/requirements">
                                 <i class="metismenu-icon pe-7s-box1"></i>
                                 Requirements
                             </a>
                         </li>
+                        {%endif%}
                     </ul>
                 </div>
             </div>
