--- a/app/templates/userview/download.html
+++ b/app/templates/userview/download.html
@@ -255,6 +255,6 @@
 {% endblock %}
 
 {% block scripting %}
-<script type="text/javascript" src="{{ url_for('static', filename='scripts/pages/settings.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='scripts/pages/download.js') }}"></script>
 {% endblock %}
 
