--- a/app/templates/admin/admin_index.html
+++ b/app/templates/admin/admin_index.html
@@ -45,6 +45,8 @@
             description='Invites a new user to create their own account', icon='paper plane icon') }}
             {{ dashboard_option('Spider Statistic', 'admin.spider_statistic',
             description='Spider process data', icon='bug icon') }}
+            {{ dashboard_option('Telegram signals', 'admin.signals_status',
+            description='All issued signals', icon='satellite-dish icon') }}
 
         </div>
     </div>
