--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -19,8 +19,26 @@
                                     <div class="widget-subheading">Registered users</div>
                                 </div>
                                 <div class="widget-content-right">
-                                    <div class="widget-numbers text-primary">{{system_status['users_registered']}}</div>
+                                    <div class="widget-numbers text-primary tooltip-help" data-toggle="tooltip" data-placement="bottom" title="Personal: {{system_status['personal_users']}} | Managed: {{system_status['managed_users']}}">
+                                        {{system_status['users_registered']}}
+                                    </div>
                                 </div>
+<!--                                <div class="widget-content-right filter-items">-->
+<!--                                    <div class="position-items">-->
+<!--                                        <div class="item info-items pr-3" >-->
+<!--                                            <div class="text-primary text-center rate-item">{{system_status['users_registered']}}</div>-->
+<!--                                            <div class="label-info text-primary">All</div>-->
+<!--                                        </div>-->
+<!--                                        <div class="item info-items pr-3">-->
+<!--                                            <div class="text-center rate-item">{{system_status['personal_users']}}</div>-->
+<!--                                            <div class="label-info">Personal</div>-->
+<!--                                        </div>-->
+<!--                                        <div class="item last-item info-items">-->
+<!--                                            <div class="text-center rate-item">{{system_status['managed_users']}}</div>-->
+<!--                                            <div class="label-info">Managed</div>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
+<!--                                </div>-->
                             </div>
                         </div>
                     </div>
@@ -95,7 +113,7 @@
                             </div>
                             <div class="widget-content-right filter-items">
                                 <div class="position-items">
-                                    <div class="item info-items pr-3" data-toggle="tooltip" data-placement="bottom" title="Positions closed for technical reason">
+                                    <div class="item info-items pr-3 tooltip-help" data-toggle="tooltip" data-placement="bottom" title="Positions closed for technical reason">
                                         <div class="text-primary text-center rate-item">{{system_status['technical_positions']}}</div>
                                         <div class="label-info text-primary">Technical</div>
                                     </div>
